tests/ui/drop/recursion-check-on-erroneous-impl.stderr
error[E0186]: method `drop` has a `&mut self` declaration in the trait, but not in the impl
  --> $DIR/recursion-check-on-erroneous-impl.rs:8:5
   |
LL |     fn drop() {}
   |     ^^^^^^^^^ expected `&mut self` in impl
   |
   = note: `drop` from trait: `fn(&mut Self)`

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0186`.
